Add Doctrine support

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "ext-intl": "*",
         "zendframework/zend-mvc": "^3",
         "zendframework/zend-mvc-i18n": "*",
-        "zendframework/zend-navigation": "*"
+        "zendframework/zend-navigation": "*",
+        "doctrine/doctrine-orm-module": "^1.1"
     },
     "require-dev": {
         "zendframework/zend-developer-tools": "*"
