--- a/config/autoload/local.config.php.dist
+++ b/config/autoload/local.config.php.dist
@@ -1,3 +1,17 @@
 <?php
 
-return [];
+return [
+    'doctrine' => [
+        'connection' => [
+            'orm_default' => [
+                'driverClass' => Doctrine\DBAL\Driver\PDOMySql\Driver::class,
+                'params' => [
+                    'host' => '',
+                    'dbname' => '',
+                    'user' => '',
+                    'password' => ''
+                ]
+            ]
+        ]
+    ]
+];
