--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "doctrine/doctrine-orm-module": "^1.1"
     },
     "require-dev": {
-        "zendframework/zend-developer-tools": "*"
+        "zendframework/zend-developer-tools": "*",
+        "phpunit/phpunit": "^5"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
