--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
     "require-dev": {
         "zendframework/zend-developer-tools": "*",
-        "phpunit/phpunit": "^5"
+        "phpunit/phpunit": "^5",
+        "behat/behat": "^3.3"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
