--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "gedmo/doctrine-extensions": "^2.4"
     },
     "require-dev": {
+        "ext-dom": "*",
         "zendframework/zend-developer-tools": "*",
         "phpunit/phpunit": "^5",
         "behat/behat": "^3.3"
