--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     },
     "require-dev": {
         "ext-dom": "*",
+        "ext-mbstring": "*",
         "zendframework/zend-developer-tools": "*",
         "phpunit/phpunit": "^5",
         "behat/behat": "^3.3"
