Generate BAT proxy scripts when running Composer from inside the VM

--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,8 @@
         "psr-4": {
             "Application\\": "module/Application/src/"
         }
+    },
+    "config": {
+        "bin-compat": "full"
     }
 }
