Add Travis CI configuration

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "5.6 || ~7",
+        "php": "^5.6 || ^7",
         "ext-intl": "*",
         "zendframework/zend-mvc": "^3",
         "zendframework/zend-mvc-i18n": "*",
